--- a/style_desktop.css
+++ b/style_desktop.css
@@ -11,8 +11,14 @@
     }
 
     h1 {
+        font-weight: bold;
+        text-transform: uppercase;
+        margin: 0;
+        color: #212529;
+        padding-top: 15vh;
         font-size: 3em;
         font-family: Arial, Helvetica, sans-serif;
+        text-align: center;
     }
 
     h2 {
@@ -130,9 +136,7 @@
     }
 
     .title>h1 {
-        font-weight: bold;
-        margin: 0;
-        text-transform: uppercase;
+        padding: 0;
     }
 
     .title>h2 {
@@ -146,13 +150,6 @@
     }
 
     /*----- PRESENTATION -----*/
-
-    .presentation>h1 {
-        margin: 0;
-        color: #212529;
-        padding-left: 5%;
-        padding-top: 6%;
-    }
 
     .presentation_content {
         display: flex;
@@ -207,13 +204,6 @@
 
     /*----- COMPETENCES -----*/
 
-    .competences>h1 {
-        margin: 0;
-        color: #212529;
-        padding-left: 5%;
-        padding-top: 6%;
-    }
-
     .competences_content {
         display: flex;
         flex-wrap: wrap;
@@ -255,13 +245,6 @@
     }
 
     /*----- MES PROJETS -----*/
-
-    .projects>h1 {
-        margin: 0;
-        color: #212529;
-        padding-left: 5%;
-        padding-top: 6%;
-    }
 
     .project_img>img {
         width: 30%;
