--- a/style_mobile.css
+++ b/style_mobile.css
@@ -10,8 +10,14 @@
     }
 
     h1 {
+        font-weight: bold;
+        text-transform: uppercase;
+        margin: 0;
+        color: #212529;
+        padding-top: 15vh;
         font-size: 2em;
         font-family: Arial, Helvetica, sans-serif;
+        text-align: center;
     }
 
     h2 {
@@ -182,9 +188,7 @@
     }
 
     .title>h1 {
-        font-weight: bold;
-        margin: 0;
-        text-transform: uppercase;
+        padding: 0;
     }
 
     .title>h2 {
@@ -198,13 +202,6 @@
     }
 
     /*----- PRESENTATION -----*/
-
-    .presentation>h1 {
-        margin: 0;
-        color: #212529;
-        padding-left: 5%;
-        padding-top: 15vh;
-    }
 
     .presentation_content {
         padding-top: 5%;
@@ -258,13 +255,6 @@
     }
 
     /*----- COMPETENCES -----*/
-
-    .competences>h1 {
-        margin: 0;
-        color: #212529;
-        padding-left: 5%;
-        padding-top: 15vh;
-    }
     
     .competences_content {
         display: flex;
@@ -308,13 +298,6 @@
 
      /*----- MES PROJETS -----*/
 
-     .projects>h1 {
-        margin: 0;
-        color: #212529;
-        padding-left: 5%;
-        padding-top: 6%;
-    }
-
     .project_img>img {
         width: 30%;
         border-radius: 50%;
@@ -351,10 +334,6 @@
     .project_content {
         padding: 5%;
         color: #212529;
-    }
-
-    .project_content>h1 {
-        margin-top: 15vh;
     }
 
     .project_content_img {
