--- a/style_desktop.css
+++ b/style_desktop.css
@@ -17,23 +17,23 @@
         color: #212529;
         padding-top: 15vh;
         font-size: 3em;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: Orbitron;
         text-align: center;
     }
 
     h2 {
         font-size: 2em;
         color: #212529;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: Orbitron;
     }
 
     p {
         font-size: 1.5em;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
 
     a {
-        font-family: Arial, Helvetica, sans-serif; 
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
 
     /*----- SLIDE ANIMATIONS -----*/
@@ -219,6 +219,7 @@
         height: 300px;
         border-radius: 2%;
         background-color: whitesmoke;
+        box-shadow: 0 3px 5px #0000002e;
     }
 
     .competence:hover {
@@ -262,6 +263,7 @@
         height: 300px;
         border-radius: 2%;
         background-color: whitesmoke;
+        box-shadow: 0 3px 5px #0000002e;
     }
 
     .project:hover {
