--- a/style_mobile.css
+++ b/style_mobile.css
@@ -16,22 +16,22 @@
         color: #212529;
         padding-top: 15vh;
         font-size: 2em;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: Orbitron;
         text-align: center;
     }
 
     h2 {
         font-size: 1.5em;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: Orbitron;
     }
 
     p {
         font-size: 1em;
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
 
     a {
-        font-family: Arial, Helvetica, sans-serif; 
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     }
 
       /*----- SLIDE ANIMATIONS -----*/
@@ -271,6 +271,7 @@
         height: 300px;
         border-radius: 2%;
         background-color: whitesmoke;
+        box-shadow: 0 3px 5px #0000002e;
     }
 
     .competence:hover {
@@ -314,6 +315,7 @@
         height: 300px;
         border-radius: 2%;
         background-color: whitesmoke;
+        box-shadow: 0 3px 5px #0000002e;
     }
 
     .project:hover {
