--- a/style_tablet.css
+++ b/style_tablet.css
@@ -256,8 +256,77 @@
     }
 
     /*----- COMPETENCES -----*/
+
+    .skills_toggle_container {
+        width: 100%;
+        margin-top: 5%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .skills_toggle {
+        width: 30%;
+        display: flex;
+        background-color: #333;
+        border-radius: 100px;
+        justify-content: space-around;
+    }
+
+    .skills_toggle>p {
+        width: 30%;
+        text-align: center;
+        padding: 1%;
+        font-size: 1em;
+        font-weight: bold;
+        color: #F8F9FA;
+        border-radius: 100px;
+        cursor: pointer;
+        user-select: none;
+    }
+
+    .skills_toggle_select {
+        background-color: #0553B1;
+        color: #E9ECEF;
+        animation: pop 0.3s linear 1;
+    }
+
+    .skills_container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: 2%;
+    }
+
+    .skills_container_display_none {
+        display: none;
+    }
+
+    .skill_box {
+        align-content: center;
+        width: 50px;
+        height: 50px;
+        text-align: center;
+        padding: 2%;
+        margin: 1%;
+        background-color: whitesmoke;
+        box-shadow: 0 3px 5px #0000002e;
+        border-radius: 10px;
+    }
+
+    .skill_box>img {
+        width: 50px;
+        height: 50px;
+    }
+
+    .skill_box:hover {
+        animation: pop 0.3s linear 1;
+    }
+
+    @keyframes pop {
+        50%  {transform: scale(1.2);}
+    }
     
-    .competences_content {
+    /*.competences_content {
         display: flex;
         flex-wrap: wrap;
         margin: 5%;
@@ -296,7 +365,7 @@
 
     .skill_img>img {
         width: 30%;
-    }
+    }*/
 
      /*----- MES PROJETS -----*/
 
