--- a/style_desktop.css
+++ b/style_desktop.css
@@ -37,11 +37,15 @@
 
     p {
         font-size: 1.5em;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family: Arial, Helvetica, sans-serif;
     }
 
     a {
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    span {
+        font-family: Arial, Helvetica, sans-serif;
     }
 
     /*----- SLIDE ANIMATIONS -----*/
