--- a/style_mobile.css
+++ b/style_mobile.css
@@ -29,11 +29,15 @@
 
     p {
         font-size: 1em;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family: Arial, Helvetica, sans-serif;
     }
 
     a {
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    span {
+        font-family: Arial, Helvetica, sans-serif;
     }
 
       /*----- SLIDE ANIMATIONS -----*/
@@ -428,6 +432,8 @@
     }
 
     .project_more {
+        width: 100%;
+        text-align: center;
         margin-top: 5vh;
         margin-bottom: 5vh;
     }
