--- a/style_desktop.css
+++ b/style_desktop.css
@@ -32,7 +32,7 @@
     h3 {
         font-size: 2em;
         color: #212529;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family: Arial, Helvetica, sans-serif;
     }
 
     p {
@@ -397,6 +397,10 @@
         color: white;
         padding: 1%;
         font-weight: bold;
+    }
+
+    .project_desc {
+        text-align: justify;
     }
 
     .project_more {
