--- a/style_tablet.css
+++ b/style_tablet.css
@@ -27,6 +27,10 @@
         font-family: Orbitron;
     }
 
+    h3 {
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
     p {
         font-size: 1.5em;
         font-family: Arial, Helvetica, sans-serif;
@@ -428,6 +432,11 @@
         color: white;
         padding: 2%;
         font-weight: bold;
+    }
+
+    .project_desc {
+        margin: 3%;
+        text-align: justify;
     }
 
     .project_more {
