--- a/style_desktop.css
+++ b/style_desktop.css
@@ -478,6 +478,10 @@
         color: #212529;
     }
 
+    .project_content>h1,h2 {
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
     .project_content_container {
         display: flex;
         align-items: center;
