--- a/style_mobile.css
+++ b/style_mobile.css
@@ -419,6 +419,21 @@
         justify-content: center;
     }
 
+    @keyframes pop {
+        0%  {
+            transform: scale(0.5);
+            opacity: 0%;
+        }
+        100% {
+            transform: scale(1);
+            opacity: 100%;
+        }
+    }
+
+    .pop_animation {
+        animation: pop 0.5s linear 1;
+    }
+
     .project_box {
         width: 80%;
         padding: 2%;
