--- a/style_tablet.css
+++ b/style_tablet.css
@@ -115,6 +115,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-around;
+        cursor: pointer;
     }
 
     .menuBurger span {
