--- a/style_desktop.css
+++ b/style_desktop.css
@@ -457,6 +457,7 @@
         border-radius: 10px;
         color: #212529;
         padding: 1% 2% 1% 2%;
+        margin-right: 1%;
     }
 
     .project_desc {
