--- a/style_desktop.css
+++ b/style_desktop.css
@@ -166,16 +166,10 @@
         gap: 3em;
     }
 
-    .avatar_container {
-        width: 30%;
-    }
-
     .avatar {
-        /*margin-left: 20%;*/
         width: 500px;
         height: 500px;
         border-radius: 50%;
-        /*border: 2px solid #212529;*/
         border: 5px solid #0553B1;
         background-color: #E9ECEF;
         box-shadow: 
@@ -193,8 +187,6 @@
     .presentation_txt {
         font-size: 1em;
         color: #212529;
-        /*margin-left: 10%;
-        padding-right: 30%;*/
         text-align: justify;
     }   
 
@@ -447,7 +439,9 @@
     .project_box {
         width: 60%;
         padding: 2%;
-        margin: 2%;
+        margin-top: 5%;
+        margin-left: 2%;
+        margin-right: 2%;
         background-color: whitesmoke;
         box-shadow: 0 3px 5px #0000002e;
         border-radius: 10px;
@@ -455,6 +449,7 @@
 
     .project_header {
         width: 100%;
+        gap: 4em;
         display: flex;
         align-items: center;
         align-content: center;
@@ -474,7 +469,7 @@
     .project_details {
         width: 100%;
         height: 20vh;
-        margin-left: 2%;
+        
     }
 
     .project_label {
