--- a/style_mobile.css
+++ b/style_mobile.css
@@ -214,8 +214,9 @@
     }
 
     .avatar {
-        width: 250px;
-        height: 250px;
+        width: 200px;
+        height: 200px;
+        margin-top: 5%;
         border-radius: 50%;
         border: 5px solid #0553B1;
         background-color: #E9ECEF;
@@ -236,16 +237,15 @@
 
      /*----- DOWNLOAD BUTTON -----*/
 
-     .download_btn {
+    .download_btn {
+        width: 100%;
+        justify-content: center;
         margin-top: 10vh;
         display: flex;
-        padding-left: 5%;
-        padding-right: 5%;
     }
 
     .download_btn>a {
-        width: 100%;
-        padding: 5%;
+        padding: 2% 15% 2% 15%;
         border-radius: 100px;
         text-align: center;
         transition: 0.5s;
@@ -515,7 +515,7 @@
     }
 
     .project_more>a {
-        padding: 3% 15% 3% 15%;
+        padding: 2% 15% 2% 15%;
         border-radius: 100px;
         text-align: center;
         transition: 0.5s;
