--- a/style_tablet.css
+++ b/style_tablet.css
@@ -213,8 +213,9 @@
     }
 
     .avatar {
-        width: 500px;
-        height: 500px;
+        width: 200px;
+        height: 200px;
+        margin-top: 5%;
         border-radius: 50%;
         border: 5px solid #0553B1;
         background-color: #E9ECEF;
@@ -227,7 +228,7 @@
     }
 
     .presentation_txt {
-        margin: 10%;
+        margin: 5% 10% 5% 10%;
     }
 
     .presentation_txt>p {
@@ -237,16 +238,15 @@
 
      /*----- DOWNLOAD BUTTON -----*/
 
-     .download_btn {
+    .download_btn {
+        width: 100%;
+        justify-content: center;
         margin-top: 10vh;
         display: flex;
-        padding-left: 5%;
-        padding-right: 5%;
     }
 
     .download_btn>a {
-        width: 100%;
-        padding: 2vh;
+        padding: 2% 15% 2% 15%;
         border-radius: 100px;
         text-align: center;
         transition: 0.5s;
@@ -389,7 +389,7 @@
 
     .experiences_container {
         width: 100%;
-        height: 120vh;
+        height: 150vh;
         display: flex;
         justify-content: center;
         margin-top: 5vh;
@@ -400,7 +400,7 @@
         position: absolute;
         background-color: black;
         width: 5px;
-        height: 120vh;
+        height: 150vh;
     }
 
     .circle {
@@ -414,7 +414,7 @@
     .experience_box {
         align-content: center;
         width: 700px;
-        height: 40vh;
+        height: 400px;
         padding: 2%;
         margin: 2%;
         background-color: whitesmoke;
@@ -427,7 +427,7 @@
     }
 
     .exp2 {
-        margin-top: 80vh;
+        margin-top: 100vh;
     }
 
     .experience_header {
@@ -463,6 +463,10 @@
 
      /*----- PROJETS -----*/
 
+     .projects {
+        margin-top: 10%;
+     }
+
      .projects_list {
         width: 100%;
         justify-content: center;
@@ -493,7 +497,9 @@
     .project_box {
         width: 80%;
         padding: 2%;
-        margin: 2%;
+        margin-top: 5%;
+        margin-left: 2%;
+        margin-right: 2%;
         background-color: whitesmoke;
         box-shadow: 0 3px 5px #0000002e;
         border-radius: 10px;
@@ -544,7 +550,7 @@
 
     .project_more>a {
         width: 20%;
-        padding: 3% 15% 3% 15%;
+        padding: 2% 15% 2% 15%;
         border-radius: 100px;
         text-align: center;
         transition: 0.5s;
@@ -572,7 +578,7 @@
     }
 
     .hidden_projects_btn_container>a {
-        width: 60%;
+        width: 40%;
     }
 
     .hidden_projects_btn {
