--- a/style_desktop.css
+++ b/style_desktop.css
@@ -17,25 +17,25 @@
         margin: 0;
         color: #212529;
         padding-top: 15vh;
-        font-size: 3em;
+        font-size: 50px;
         font-family: Orbitron;
         text-align: center;
     }
 
     h2 {
-        font-size: 2em;
+        font-size: 40px;
         color: #212529;
         font-family: Orbitron;
     }
 
     h3 {
-        font-size: 2em;
+        font-size: 30px;
         color: #212529;
         font-family: Arial, Helvetica, sans-serif;
     }
 
-    p,a,span {
-        font-size: 1em;
+    p {
+        font-size: 20px;
         font-family: Arial, Helvetica, sans-serif;
     }
 
@@ -134,8 +134,11 @@
 
     .title {
         color: #212529;
-        font-size: 2em;
         text-align: center;
+    }
+
+    .title>h1 {
+        font-size: 100px;
     }
 
     .title>a {
@@ -180,7 +183,6 @@
     }
 
     .presentation_txt {
-        font-size: 1.5em;
         color: #212529;
         text-align: justify;
     }   
@@ -236,7 +238,6 @@
         width: 30%;
         text-align: center;
         padding: 1%;
-        font-size: 1em;
         font-weight: bold;
         color: #F8F9FA;
         border-radius: 100px;
@@ -392,14 +393,12 @@
         width: 100%;
         margin-bottom: 2%;
         font-weight: bold;
-        font-size: 2em;
     }
 
     .experience_subtitle {
         width: 100%;
         margin-bottom: 1%;
         font-weight: bold;
-        font-size: 1.5em;
     }
 
     /*----- PROJETS -----*/
@@ -621,7 +620,6 @@
         bottom: 0;
         background-color: #0553B1;
         color: #F8F9FA;
-        font-size: 1em;
         text-align: center;
         padding-top: 2%;
     }
