--- a/style_mobile.css
+++ b/style_mobile.css
@@ -16,22 +16,23 @@
         margin: 0;
         color: #212529;
         padding-top: 15vh;
-        font-size: 2em;
+        font-size: 30px;
         font-family: Orbitron;
         text-align: center;
     }
 
     h2 {
-        font-size: 1.5em;
+        font-size: 25px;
         font-family: Orbitron;
     }
 
     h3 {
+        font-size: 20px;
         font-family: Arial, Helvetica, sans-serif;
     }
 
-    p,a,span {
-        font-size: 1em;
+    p {
+        font-size: 15px;
         font-family: Arial, Helvetica, sans-serif;
     }
 
@@ -185,8 +186,11 @@
 
     .title {
         color: #212529;
-        font-size: 1em;
         text-align: center;
+    }
+
+    .title>h1 {
+        font-size: 50px;
     }
 
     .title>a {
@@ -286,7 +290,6 @@
         width: 30%;
         text-align: center;
         padding: 1%;
-        font-size: 1em;
         font-weight: bold;
         color: #F8F9FA;
         border-radius: 100px;
@@ -418,14 +421,12 @@
         width: 100%;
         text-align: center;
         font-weight: bold;
-        font-size: 2em;
     }
 
     .experience_subtitle {
         width: 100%;
         text-align: center;
         font-weight: bold;
-        font-size: 1.5em;
     }
 
     .experience_desc {
@@ -637,7 +638,6 @@
         bottom: 0;
         background-color: #0553B1;
         color: #F8F9FA;
-        font-size: 1em;
         text-align: center;
         margin-top: 5vh;
         padding-top: 2%;
